[tool.poetry]
name = "tagging"
version = "0.1.0"
description = "Tagging analysis of football matches."
authors = ["Sebastian Schneider <sschneider@point-8.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.0.1"
numpy = "1.22.0"
matplotlib = "3.1.3"
python-slugify = "4.0.0"
pydantic = "^1.7.3"
streamlit = "^0.72.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 80
target-version = ["py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"